# kfxmpp

./: ProjectHome.md
kfxmpp/: AUTHORS  autogen.sh  configure.in  docStyle.css  header_template.h  kfxmpp-1.0.pc.in
kfxmpp/doc/: libxml.h
kfxmpp/kfxmpp/: Makefile.am  core.h  error.c  error.h  event.h  kfxmpp.c  kfxmpp.h  message.h  sasl.c  sasl.h  session.h  stanza.c  streamparser.h
kfxmpp/tests/: stream.xml  test-session.c  test2.c
kfxmpp/tools/: Makefile.my  compile  link  refs
kfxmpp/utils/: Makefile.am  kfxmpp-send.c
trunk/kfxmpp/: ChangeLog  Doxyfile  HACKING  Makefile.am  TODO  config.h.in  docFooter.html  docHeader.html
trunk/kfxmpp/doc/: groups.h
trunk/kfxmpp/kfxmpp/: core.c  event.c  message.c  session.c  stanza.h  streamparser.c
trunk/kfxmpp/tests/: Makefile.am  test-event.c  test-stanza.c
